# indexa

./: .gitattributes  .gitignore  .lycheeignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  USAGE.md  deny.toml
.cargo/: config.toml
.claude/: settings.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cargo-deny.yml  ci.yml  dco.yml  dense-eval.yml  docs.yml  release.yml
apps/indexa/: Cargo.toml
apps/indexa-desktop/: .gitignore  Cargo.toml  README.md  tauri.conf.json
apps/indexa-desktop/icons/: icon.icns
apps/indexa-desktop/src/: main.rs
apps/indexa/src/: main.rs
apps/indexa/src/commands/: ask.rs  classify.rs  completion.rs  deep.rs  describe.rs  doctor.rs  eval.rs  export.rs  fingerprint.rs  formats.rs  graph.rs  helpers.rs  index.rs  insights.rs  inspect.rs  map.rs  mcp.rs  mcp_install.rs  mod.rs  multimodal.rs  notes.rs  pack.rs  prune.rs  related.rs  report.rs  review.rs  rm.rs  saved.rs  scan.rs  search.rs  serve.rs  snapshot.rs  sources.rs  status.rs  summarize.rs  update.rs  watch.rs  weight.rs  worker.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: app_detect.rs  config.rs  fingerprint.rs  fingerprints_builtin.json  fingerprints_seed.json  lib.rs  models_catalog.rs  notes.rs  pathutil.rs  resource.rs  smart_classify.rs  store.rs  surface.rs  text.rs  walker.rs  watcher.rs
crates/core/src/decisions/: detectors.rs  effects.rs  mod.rs  templates.rs
crates/core/src/decisions/detectors/: mod.rs  tests.rs
crates/core/src/store/: ann.rs  category_edges.rs  chunks.rs  classify.rs  communities.rs  decisions.rs  dir_apps.rs  edges.rs  entries.rs  insights.rs  mod.rs  pack_edges.rs  packs.rs  pagerank.rs  prune.rs  queue.rs  saved.rs  schema.rs  search.rs  semantic_edges.rs  sessions.rs  summaries.rs  tests.rs  types.rs  usage.rs  weights.rs
crates/core/src/store/tests/: basics.rs  decisions.rs  dir_apps.rs  entry_cleanup.rs  graph.rs  incremental.rs  insights.rs  mod.rs  packs.rs  queue.rs  scoped_resolution.rs  sessions.rs  usage.rs  weights.rs
crates/embed/: Cargo.toml
crates/embed/src/: batcher.rs  google.rs  lib.rs  ollama.rs  openai.rs
crates/http-util/: Cargo.toml
crates/http-util/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: anthropic.rs  claude_code.rs  lib.rs  ollama.rs  openai_compat.rs
crates/llm/tests/: caption_live.rs
crates/mcp/: Cargo.toml  golden_prompts.txt  golden_tools.txt
crates/mcp/src/: admin.rs  curation.rs  graph.rs  insights.rs  lib.rs  packs.rs  prompts.rs  query_extras.rs  resources.rs  retrieval.rs  review.rs
crates/parsers/: Cargo.toml
crates/parsers/examples/: custom_parser.rs
crates/parsers/src/: archive.rs  binary.rs  code.rs  email.rs  epub.rs  html.rs  image.rs  ipynb.rs  iwork.rs  lib.rs  media.rs  office.rs  org.rs  pdf.rs  presentation.rs  proc.rs  registry.rs  svg.rs  text.rs  types.rs
crates/parsers/tests/: error_cases.rs  multimodal_live.rs
crates/query/: Cargo.toml
crates/query/src/: contextual.rs  eval.rs  export.rs  impact.rs  lib.rs  qa.rs  redact.rs  rerank.rs  summarize.rs  worker.rs
crates/query/src/qa/: agentic.rs  cluster.rs  confidence.rs  explain.rs  mmr.rs  mod.rs  retrieve.rs  rewrite.rs  synthesize.rs  tests.rs
crates/query/tests/: answer_pipeline.rs
crates/update/: Cargo.toml
crates/update/src/: lib.rs  skew.rs
crates/web/: Cargo.toml
crates/web/assets/ui/: README.md  app.css  app.js  index.html
crates/web/assets/ui/css/: 01-tokens.css  02-base.css  03-topbar.css  04-layout.css  05-views.css  06-overlays.css  07-jobs.css  08-engine.css  09-model-fit-popover.css  10-treemap.css  11-graph.css  12-review.css  13-responsive.css  14-update-overlay.css  15-file-preview.css  16-update-changelog.css  17-legible.css  18-graph-explore.css  19-conversation.css  20-graph-layers.css  21-graph-communities.css
crates/web/assets/ui/js/: 00-auth-bootstrap.js  01-state-theme-tabs.js  02-stats-tree.js  03-jobs-search.js  04-jobs-views.js  05-summary.js  06-chat-settings.js  07-map.js  08-util-palette-init.js  09-engine.js  10-model-fit-popover.js  11-onboarding.js  12-treemap.js  13-classify.js  14-watch.js  15-update.js  16-context-packs.js  17-weights.js  18-insights.js  19-graph.js  20-review.js  21-impact.js  22-responsive.js  23-sidebar-resize.js  24-file-preview.js  25-graph-explore.js  26-url-state.js  27-health.js  28-graph-layers.js  29-graph-communities.js
crates/web/src/: dto.rs  guard.rs  jobs.rs  jobs_exec.rs  lib.rs  update_control.rs  update_progress.rs
crates/web/src/handlers/: ask.rs  classify.rs  config.rs  export.rs  file_preview.rs  fs.rs  graph.rs  health.rs  insights_handler.rs  inspect.rs  jobs.rs  keys.rs  misc.rs  mod.rs  models.rs  packs.rs  providers.rs  queue.rs  review.rs  saved.rs  stats.rs  summary.rs  telemetry.rs  tree.rs  ui.rs  update.rs  watch.rs  weights.rs
crates/web/src/jobs_exec/: deep.rs  mod.rs  watchdog.rs
docs/: COMPETITIVE.md  TROUBLESHOOTING.md  architecture.md  config.md  fingerprints.md  known-issues-v0.2.2.md  methodology.md  quickstart.md  signing.md
docs/archive/: known-issues-v0.2.2.md
docs/how-to/: README.md  add-an-mcp-tool.md  debug-the-code-graph.md  evaluate-retrieval.md  index-and-export-for-claude.md  live-retrieval-over-mcp.md  tune-for-a-small-machine.md
fixtures/: self-golden.json
scripts/: web-smoke.mjs
tools/gen-fingerprints/: Cargo.toml
tools/gen-fingerprints/src/: main.rs
