[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/parsers",
    "crates/embed",
    "crates/llm",
    "crates/query",
    "crates/cli",
    "crates/web",
    "crates/mcp",
    "apps/indexa",
]

[workspace.package]
version = "0.8.0"
edition = "2021"
authors = ["Harf Promo <ahmed541991@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/harf-promo/indexa"
homepage = "https://github.com/harf-promo/indexa"
readme = "README.md"
description = "The local context engine for AI — index your disk once, serve grounded context to any cloud or local model without burning its context window."

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Filesystem
jwalk = "0.8"
ignore = "0.4"
notify = "6"
notify-debouncer-full = "0.3"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Platform paths
directories = "5"

# Async traits
async-trait = "0.1"

# Shell helpers
shellexpand = "3"

# Config file parsing
toml = "0.8"

# System resource detection
sysinfo = { version = "0.30" }
