[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/parsers",
    "crates/embed",
    "crates/llm",
    "crates/query",
    "crates/cli",
    "crates/web",
    "crates/mcp",
    "crates/update",
    "apps/indexa",
]
# Excluded from --workspace builds: Tauri requires platform-specific native
# libraries (webkit2gtk on Linux) that the CI ubuntu-latest runner does not have.
# Build manually with: cargo build --manifest-path apps/indexa-desktop/Cargo.toml
exclude = ["apps/indexa-desktop"]

[workspace.package]
version = "0.14.0"
edition = "2021"
authors = ["Harf Promo <ahmed541991@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/harf-promo/indexa"
homepage = "https://github.com/harf-promo/indexa"
readme = "README.md"
description = "The local context engine for AI — index your disk once, serve grounded context to any cloud or local model without burning its context window."

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hnsw_rs = "0.3.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Filesystem
jwalk = "0.8"
ignore = "0.4"
notify = "6"
notify-debouncer-full = "0.3"

# Storage
rusqlite = { version = "0.40", features = ["bundled"] }

# Platform paths
directories = "5"

# Async traits
async-trait = "0.1"

# Shell helpers
shellexpand = "3"

# Config file parsing
toml = "1.1"

# System resource detection
sysinfo = { version = "0.39" }

# HTTP client (all consumers must use rustls-tls, never native-tls)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Self-update
semver = "1"
self-replace = "1"
tempfile = "3"
