[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/http-util",
    "crates/parsers",
    "crates/embed",
    "crates/llm",
    "crates/query",
    "crates/cli",
    "crates/web",
    "crates/mcp",
    "crates/update",
    "apps/indexa",
]
# Excluded from --workspace builds: Tauri requires platform-specific native
# libraries (webkit2gtk on Linux) that the CI ubuntu-latest runner does not have.
# Build manually with: cargo build --manifest-path apps/indexa-desktop/Cargo.toml
exclude = ["apps/indexa-desktop", "tools/gen-fingerprints"]

[workspace.package]
version = "0.66.0"
edition = "2021"
authors = ["Harf Promo <ahmed541991@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/harf-promo/indexa"
homepage = "https://github.com/harf-promo/indexa"
readme = "README.md"
description = "The local context engine for AI — index your disk once, serve grounded context to any cloud or local model without burning its context window."

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hnsw_rs = "0.3.4"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Filesystem
jwalk = "0.8"
ignore = "0.4"
notify = "6"
notify-debouncer-full = "0.3"

# Storage
rusqlite = { version = "0.40", features = ["bundled"] }

# Platform paths
directories = "5"
# Network interface enumeration (LAN serve)
if-addrs = "0.15"

# Async traits
async-trait = "0.1"

# Shell helpers
shellexpand = "3"

# Config file parsing
toml = "1.1"

# Regex (secret-scan/redaction on export; already in the tree transitively)
regex = "1"

# HTML → Markdown for opt-in remote web-page ingestion (Apache-2.0; reuses in-tree html5ever)
htmd = "0.5"

# System resource detection
sysinfo = { version = "0.39" }

# Content hashing (decision-ledger evidence fingerprints — must be stable across
# runs and binary versions, which rules out std's DefaultHasher)
sha2 = "0.10"

# HTTP client (all consumers must use rustls-tls, never native-tls)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Self-update
semver = "1"
self-replace = "1"
tempfile = "3"

# Pure-Rust ML inference (Apache-2.0/MIT) — used for the candle cross-encoder reranker.
# All deps are 100% Rust; no native dylibs, safe for macOS hardened-runtime notarization.
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
# HuggingFace model hub — model file cache (Apache-2.0).
# v0.5 + the `ureq` feature gives the sync download API backed by ureq 3, whose
# default TLS is rustls + ring (NOT native-tls/openssl, NOT aws-lc). This keeps
# the tree openssl-free so it cross-compiles to aarch64-linux — same crypto
# provider (ring) the reqwest/rustls invariant already relies on. Do NOT enable
# the `native-tls`/`default-tls` features: they pull openssl-sys and break the
# Linux ARM64 cross build (the v0.43.0 release failure).
hf-hub = { version = "0.5", default-features = false, features = ["ureq"] }
# HF tokenizer (Apache-2.0). onig = Oniguruma, compiled from bundled C source and
# statically linked — same pattern as rusqlite's bundled SQLite, safe for notarization.
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
