[package]
name = "indexa-desktop"
version = "0.14.0"
edition = "2021"
authors = ["Harf Promo <ahmed541991@gmail.com>"]
license = "Apache-2.0"
description = "Indexa desktop app — native menu-bar wrapper around the local context engine."

# This crate is intentionally excluded from the workspace (see root Cargo.toml).
# Build it with:
#   cargo build --manifest-path apps/indexa-desktop/Cargo.toml [--release]
#
# Requires:
#   macOS: Xcode Command Line Tools + Xcode (for .app bundle)
#   Linux: webkit2gtk-4.1, libgtk-3-dev (not in CI runners)
#   Windows: WebView2 (pre-installed on Win10 21H2+)
#
# Depends on workspace crates via relative paths; version is kept in sync manually.

[[bin]]
name = "indexa-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell   = { version = "2" }
tauri-plugin-updater = { version = "2" }

# Indexa core — same crates as `apps/indexa` but linked directly so the
# desktop app embeds the web server instead of shelling out.
anyhow      = "1"
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

indexa-core    = { path = "../../crates/core" }
indexa-embed   = { path = "../../crates/embed" }
indexa-llm     = { path = "../../crates/llm" }
indexa-web     = { path = "../../crates/web" }
