[package]
name = "indexa-desktop"
version = "0.76.0"
edition = "2021"
authors = ["Harf Promo <ahmed541991@gmail.com>"]
license = "Apache-2.0"
description = "Indexa desktop app — native menu-bar wrapper around the local context engine."

# This crate is intentionally excluded from the workspace (see root Cargo.toml).
# Build it with:
#   cargo build --manifest-path apps/indexa-desktop/Cargo.toml [--release]
#
# Requires:
#   macOS: Xcode Command Line Tools + Xcode (for .app bundle)
#   Linux: webkit2gtk-4.1, libgtk-3-dev (not in CI runners)
#   Windows: WebView2 (pre-installed on Win10 21H2+)
#
# Depends on workspace crates via relative paths; version is kept in sync manually.

[[bin]]
name = "indexa-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell   = { version = "2" }
tauri-plugin-updater = { version = "2" }
# Persist window size/position across launches (v0.37). First-party Tauri plugin,
# MIT/Apache-2.0 — clears cargo-deny without an exception. Auto-saves on move/resize/
# close and restores before show; minWidth/minHeight in tauri.conf.json clamp it.
tauri-plugin-window-state = { version = "2" }
# Pin Tauri's transitive `brotli` to the last-good 8.0.3-avoiding version: brotli 8.0.3
# ships an internal compile error (`StandardAlloc: alloc::Allocator<…>` in
# enc/combined_alloc.rs). The matching brotli-decompressor must be 5.0.1 (5.0.0 and 5.0.2
# are likewise broken) — that's pinned via the COMMITTED apps/indexa-desktop/Cargo.lock,
# not here: declaring brotli-decompressor directly drops the `std` feature brotli enables
# on it and breaks the build. The committed lock is what keeps the whole graph
# reproducible (no more floating into broken upstream releases). Drop this pin + re-float
# once brotli ships a fixed release.
brotli = "=8.0.2"

# Indexa core — same crates as `apps/indexa` but linked directly so the
# desktop app embeds the web server instead of shelling out.
anyhow      = "1"
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

indexa-core    = { path = "../../crates/core" }
indexa-embed   = { path = "../../crates/embed" }
indexa-llm     = { path = "../../crates/llm" }
indexa-web     = { path = "../../crates/web" }
indexa-update  = { path = "../../crates/update" }
