[package]
name = "indexa"
description = "The local context engine for AI."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "indexa"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
directories = { workspace = true }
shellexpand = "3"
indicatif = "0.17"
indexa-cli = { path = "../../crates/cli" }
indexa-core = { path = "../../crates/core" }
indexa-parsers = { path = "../../crates/parsers" }
indexa-embed = { path = "../../crates/embed" }
indexa-llm = { path = "../../crates/llm" }
indexa-query = { path = "../../crates/query" }
indexa-web = { path = "../../crates/web" }
indexa-mcp = { path = "../../crates/mcp" }
