[package]
name = "indexa-core"
description = "File walker, filesystem watcher, SQLite store, and graph model for Indexa."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
jwalk = { workspace = true }
ignore = { workspace = true }
rusqlite = { workspace = true }
directories = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
toml = { workspace = true }
shellexpand = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
mime_guess = "2"
hyperpolyglot = "0.1"
sysinfo = { workspace = true }

[dev-dependencies]
tempfile = "3"
