[package]
name = "indexa-llm"
description = "Description-generation adapter trait and implementations for Indexa."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
