[package]
name = "indexa-llm"
description = "Summary + answer generation adapters for Indexa (Ollama, Claude subscription, OpenAI, Anthropic, llama.cpp)."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
serde_json = { workspace = true }
base64 = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
