[package]
name = "indexa-mcp"
description = "Model Context Protocol server exposing the Indexa index to AI agents over stdio."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexa-core = { path = "../core" }
indexa-query = { path = "../query" }
indexa-embed = { path = "../embed" }
indexa-llm = { path = "../llm" }
rmcp = { version = "1.7.0", features = ["server", "transport-io", "macros"] }
schemars = "1"

[dev-dependencies]
tempfile = "3"
# Stub Embedder/Generator impls in tests use the same async-trait the traits do.
async-trait = { workspace = true }
