[package]
name = "indexa-parsers"
description = "File type parsers for Indexa (text, PDF, image, code, audio/video)."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# Markdown parsing
pulldown-cmark = "0.13"
# Mime type detection
mime_guess = "2"
# Code parsing via tree-sitter
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
# Image EXIF
kamadak-exif = "0.5"
# PDF text extraction (pure Rust, text-layer PDFs)
pdf-extract = "0.10"
# Office formats
calamine = { version = "0.26", features = ["dates"] }
# docx extraction (zip-based)
zip = { version = "2", default-features = false, features = ["deflate"] }
# Media metadata (audio/video via ffprobe subprocess — no extra dep needed)
serde_json = "1"
# Temp directories for video frame extraction
tempfile = { workspace = true }
# XML/HTML tag stripping for EPUB and office formats
quick-xml = "0.40"

[dev-dependencies]
tempfile = "3"
