[package]
name = "indexa-query"
description = "Hybrid FTS5 + vector search and RAG Q&A pipeline for Indexa."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
indexa-core = { path = "../core" }
indexa-embed = { path = "../embed" }
indexa-llm = { path = "../llm" }
async-trait.workspace = true

[dev-dependencies]
tempfile = "3"
# Integration tests in tests/ are separate crates: they only see dev-deps, so the
# normal deps used by the black-box harness are repeated here.
tokio = { workspace = true }
async-trait = { workspace = true }
indexa-core = { path = "../core" }
indexa-embed = { path = "../embed" }
indexa-llm = { path = "../llm" }
