[package]
name = "indexa-update"
description = "Self-update logic for Indexa — check GitHub Releases and atomically replace the running binary."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
self-replace = { workspace = true }
tempfile = { workspace = true }
# Verify the minisign signature of downloaded CLI assets before self-replace (pure-Rust, no
# openssl). Same scheme + key the desktop's Tauri updater verifies the app bundle with.
minisign-verify = "0.2"
base64 = { workspace = true }
