[package]
name = "indexa-web"
description = "Local web UI server for Indexa (axum + embedded frontend)."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
directories = { workspace = true }
tokio-stream = "0.1"
futures-util = "0.3"
indexa-core = { path = "../core" }
indexa-embed = { path = "../embed" }
indexa-llm = { path = "../llm" }
indexa-query = { path = "../query" }
