[package]
name = "indexa-web"
description = "Local web UI server for Indexa (axum + embedded frontend)."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
directories = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
indexa-core = { path = "../core" }
indexa-embed = { path = "../embed" }
indexa-llm = { path = "../llm" }
indexa-parsers = { path = "../parsers" }
indexa-query = { path = "../query" }
