[package]
name = "indexa-web"
description = "Local web UI server for Indexa (axum + embedded frontend)."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { workspace = true, features = ["stream"] }
directories = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
if-addrs = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
indexa-core = { path = "../core" }
indexa-embed = { path = "../embed" }
indexa-llm = { path = "../llm" }
indexa-parsers = { path = "../parsers" }
indexa-query = { path = "../query" }
indexa-update = { path = "../update" }
sha2 = { workspace = true }

[dev-dependencies]
# `tower::ServiceExt::oneshot` drives the real router in integration tests.
tower = { version = "0.5", features = ["util"] }
# Stub Embedder/Generator impls in tests use the same async-trait the traits do.
async-trait = { workspace = true }
